// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Login page component anonymous component renders correctly 1`] = `
<div
  className="root-1"
  onKeyPress={[Function]}
>
  <WithStyles(ForwardRef(Button))
    color="primary"
    onClick={[Function]}
    variant="contained"
  >
    <WithStyles(ForwardRef(Typography))
      color="inherit"
      noWrap={true}
      style={
        Object {
          "marginTop": 3,
        }
      }
    >
      login.login-button
    </WithStyles(ForwardRef(Typography))>
  </WithStyles(ForwardRef(Button))>
</div>
`;

exports[`Login page component anonymous component renders failedToLogin error correctly 1`] = `
<div
  className="root-1"
  onKeyPress={[Function]}
>
  <WithStyles(ForwardRef(Typography))>
    login.login-error-msg
  </WithStyles(ForwardRef(Typography))>
  <WithStyles(ForwardRef(Button))
    color="primary"
    onClick={[Function]}
    variant="contained"
  >
    <WithStyles(ForwardRef(Typography))
      color="inherit"
      noWrap={true}
      style={
        Object {
          "marginTop": 3,
        }
      }
    >
      login.login-button
    </WithStyles(ForwardRef(Typography))>
  </WithStyles(ForwardRef(Button))>
</div>
`;

exports[`Login page component anonymous component renders signedOutDueToTokenInvalidation error correctly 1`] = `
<div
  className="root-1"
  onKeyPress={[Function]}
>
  <WithStyles(ForwardRef(Typography))>
    login.token-invalid-msg
  </WithStyles(ForwardRef(Typography))>
  <WithStyles(ForwardRef(Button))
    color="primary"
    onClick={[Function]}
    variant="contained"
  >
    <WithStyles(ForwardRef(Typography))
      color="inherit"
      noWrap={true}
      style={
        Object {
          "marginTop": 3,
        }
      }
    >
      login.login-button
    </WithStyles(ForwardRef(Typography))>
  </WithStyles(ForwardRef(Button))>
</div>
`;

exports[`Login page component credential component renders correctly 1`] = `
<div
  className="root-1"
  onKeyPress={[Function]}
>
  <WithStyles(ForwardRef(TextField))
    color="secondary"
    disabled={false}
    inputProps={
      Object {
        "aria-label": "login.username-arialabel",
      }
    }
    label="login.username-placeholder"
    onChange={[Function]}
    value=""
  />
  <WithStyles(ForwardRef(TextField))
    color="secondary"
    disabled={false}
    inputProps={
      Object {
        "aria-label": "login.password-arialabel",
      }
    }
    label="login.password-placeholder"
    onChange={[Function]}
    type="password"
    value=""
  />
  <WithStyles(ForwardRef(Typography))>
    <WithStyles(ForwardRef(Link))
      href="login.forgotten-your-password-link"
    >
      login.forgotten-your-password
    </WithStyles(ForwardRef(Link))>
  </WithStyles(ForwardRef(Typography))>
  <WithStyles(ForwardRef(Button))
    color="primary"
    disabled={true}
    onClick={[Function]}
    variant="contained"
  >
    <WithStyles(ForwardRef(Typography))
      color="inherit"
      noWrap={true}
      style={
        Object {
          "fontWeight": "bold",
          "marginTop": 3,
        }
      }
    >
      login.login-button
    </WithStyles(ForwardRef(Typography))>
  </WithStyles(ForwardRef(Button))>
  <WithStyles(ForwardRef(Typography))>
    <WithStyles(ForwardRef(Link))
      href="login.need-help-signing-in-link"
    >
      login.need-help-signing-in
    </WithStyles(ForwardRef(Link))>
  </WithStyles(ForwardRef(Typography))>
  <DividerWithText>
    <WithStyles(ForwardRef(Typography))>
      or
    </WithStyles(ForwardRef(Typography))>
  </DividerWithText>
  <WithStyles(ForwardRef(Typography))>
    <Trans
      i18nKey="login.dont-have-an-account-sign-up-now"
      t={[Function]}
    >
      Don't have an account?
       
      <WithStyles(ForwardRef(Link))
        href="login.dont-have-an-account-sign-up-now-link"
      >
        Sign up now
      </WithStyles(ForwardRef(Link))>
    </Trans>
  </WithStyles(ForwardRef(Typography))>
</div>
`;

exports[`Login page component credential component renders failedToLogin error correctly 1`] = `
<div
  className="root-1"
  onKeyPress={[Function]}
>
  <WithStyles(ForwardRef(Typography))>
    login.login-error-msg
  </WithStyles(ForwardRef(Typography))>
  <WithStyles(ForwardRef(TextField))
    color="secondary"
    disabled={false}
    inputProps={
      Object {
        "aria-label": "login.username-arialabel",
      }
    }
    label="login.username-placeholder"
    onChange={[Function]}
    value=""
  />
  <WithStyles(ForwardRef(TextField))
    color="secondary"
    disabled={false}
    inputProps={
      Object {
        "aria-label": "login.password-arialabel",
      }
    }
    label="login.password-placeholder"
    onChange={[Function]}
    type="password"
    value=""
  />
  <WithStyles(ForwardRef(Typography))>
    <WithStyles(ForwardRef(Link))
      href="login.forgotten-your-password-link"
    >
      login.forgotten-your-password
    </WithStyles(ForwardRef(Link))>
  </WithStyles(ForwardRef(Typography))>
  <WithStyles(ForwardRef(Button))
    color="primary"
    disabled={true}
    onClick={[Function]}
    variant="contained"
  >
    <WithStyles(ForwardRef(Typography))
      color="inherit"
      noWrap={true}
      style={
        Object {
          "fontWeight": "bold",
          "marginTop": 3,
        }
      }
    >
      login.login-button
    </WithStyles(ForwardRef(Typography))>
  </WithStyles(ForwardRef(Button))>
  <WithStyles(ForwardRef(Typography))>
    <WithStyles(ForwardRef(Link))
      href="login.need-help-signing-in-link"
    >
      login.need-help-signing-in
    </WithStyles(ForwardRef(Link))>
  </WithStyles(ForwardRef(Typography))>
  <DividerWithText>
    <WithStyles(ForwardRef(Typography))>
      or
    </WithStyles(ForwardRef(Typography))>
  </DividerWithText>
  <WithStyles(ForwardRef(Typography))>
    <Trans
      i18nKey="login.dont-have-an-account-sign-up-now"
      t={[Function]}
    >
      Don't have an account?
       
      <WithStyles(ForwardRef(Link))
        href="login.dont-have-an-account-sign-up-now-link"
      >
        Sign up now
      </WithStyles(ForwardRef(Link))>
    </Trans>
  </WithStyles(ForwardRef(Typography))>
</div>
`;

exports[`Login page component credential component renders signedOutDueToTokenInvalidation error correctly 1`] = `
<div
  className="root-1"
  onKeyPress={[Function]}
>
  <WithStyles(ForwardRef(Typography))>
    login.token-invalid-msg
  </WithStyles(ForwardRef(Typography))>
  <WithStyles(ForwardRef(TextField))
    color="secondary"
    disabled={false}
    inputProps={
      Object {
        "aria-label": "login.username-arialabel",
      }
    }
    label="login.username-placeholder"
    onChange={[Function]}
    value=""
  />
  <WithStyles(ForwardRef(TextField))
    color="secondary"
    disabled={false}
    inputProps={
      Object {
        "aria-label": "login.password-arialabel",
      }
    }
    label="login.password-placeholder"
    onChange={[Function]}
    type="password"
    value=""
  />
  <WithStyles(ForwardRef(Typography))>
    <WithStyles(ForwardRef(Link))
      href="login.forgotten-your-password-link"
    >
      login.forgotten-your-password
    </WithStyles(ForwardRef(Link))>
  </WithStyles(ForwardRef(Typography))>
  <WithStyles(ForwardRef(Button))
    color="primary"
    disabled={true}
    onClick={[Function]}
    variant="contained"
  >
    <WithStyles(ForwardRef(Typography))
      color="inherit"
      noWrap={true}
      style={
        Object {
          "fontWeight": "bold",
          "marginTop": 3,
        }
      }
    >
      login.login-button
    </WithStyles(ForwardRef(Typography))>
  </WithStyles(ForwardRef(Button))>
  <WithStyles(ForwardRef(Typography))>
    <WithStyles(ForwardRef(Link))
      href="login.need-help-signing-in-link"
    >
      login.need-help-signing-in
    </WithStyles(ForwardRef(Link))>
  </WithStyles(ForwardRef(Typography))>
  <DividerWithText>
    <WithStyles(ForwardRef(Typography))>
      or
    </WithStyles(ForwardRef(Typography))>
  </DividerWithText>
  <WithStyles(ForwardRef(Typography))>
    <Trans
      i18nKey="login.dont-have-an-account-sign-up-now"
      t={[Function]}
    >
      Don't have an account?
       
      <WithStyles(ForwardRef(Link))
        href="login.dont-have-an-account-sign-up-now-link"
      >
        Sign up now
      </WithStyles(ForwardRef(Link))>
    </Trans>
  </WithStyles(ForwardRef(Typography))>
</div>
`;

exports[`Login page component login page doesn't render dropdown if anon is the only other authenticator 1`] = `
<div
  className="root-1"
>
  <WithStyles(ForwardRef(Paper))
    className="paper-class"
  >
    <WithStyles(ForwardRef(Avatar))
      className="avatar-class"
    >
      <Memo(ForwardRef(LockOutlinedIcon)) />
    </WithStyles(ForwardRef(Avatar))>
    <WithStyles(ForwardRef(Typography))
      component="h1"
      style={
        Object {
          "fontWeight": "bold",
          "paddingBottom": "16px",
        }
      }
      variant="h5"
    >
      login.title
    </WithStyles(ForwardRef(Typography))>
    <CredentialsLoginScreen
      auth={
        Object {
          "failedToLogin": false,
          "loading": false,
          "provider": TestAuthProvider {
            "authUrl": undefined,
            "autoLogin": undefined,
            "mnemonic": "",
            "redirectUrl": null,
            "token": null,
            "user": null,
          },
          "signedOutDueToTokenInvalidation": false,
        }
      }
      classes={
        Object {
          "avatar": "avatar-class",
          "paper": "paper-class",
          "root": "root-1",
          "spinner": "spinner-class",
        }
      }
      location={
        Object {
          "hash": "",
          "pathname": "/",
          "search": "",
          "state": undefined,
        }
      }
      mnemonic="user/pass"
      setComponentVisible={[Function]}
      verifyUsernameAndPassword={[Function]}
    />
    <WithStyles(ForwardRef(CircularProgress))
      className="spinner-class"
    />
  </WithStyles(ForwardRef(Paper))>
</div>
`;

exports[`Login page component login page renders anonymous login if mnemonic present with no keys 1`] = `
<div
  className="root-1"
>
  <WithStyles(ForwardRef(Paper))
    className="paper-class"
  >
    <WithStyles(ForwardRef(Avatar))
      className="avatar-class"
    >
      <Memo(ForwardRef(LockOutlinedIcon)) />
    </WithStyles(ForwardRef(Avatar))>
    <WithStyles(ForwardRef(Typography))
      component="h1"
      style={
        Object {
          "fontWeight": "bold",
          "paddingBottom": "16px",
        }
      }
      variant="h5"
    >
      login.title
    </WithStyles(ForwardRef(Typography))>
    <AnonLoginScreen
      auth={
        Object {
          "failedToLogin": false,
          "loading": false,
          "provider": TestAuthProvider {
            "authUrl": undefined,
            "autoLogin": undefined,
            "mnemonic": "nokeys",
            "redirectUrl": null,
            "token": null,
            "user": null,
          },
          "signedOutDueToTokenInvalidation": false,
        }
      }
      classes={
        Object {
          "avatar": "avatar-class",
          "paper": "paper-class",
          "root": "root-1",
          "spinner": "spinner-class",
        }
      }
      location={
        Object {
          "hash": "",
          "pathname": "/",
          "search": "",
          "state": undefined,
        }
      }
      mnemonic="nokeys"
      setComponentVisible={[Function]}
      verifyUsernameAndPassword={[Function]}
    />
    <WithStyles(ForwardRef(CircularProgress))
      className="spinner-class"
    />
  </WithStyles(ForwardRef(Paper))>
</div>
`;

exports[`Login page component login page renders credential component if no redirect url 1`] = `
<div
  className="root-1"
>
  <WithStyles(ForwardRef(Paper))
    className="paper-class"
  >
    <WithStyles(ForwardRef(Avatar))
      className="avatar-class"
    >
      <Memo(ForwardRef(LockOutlinedIcon)) />
    </WithStyles(ForwardRef(Avatar))>
    <WithStyles(ForwardRef(Typography))
      component="h1"
      style={
        Object {
          "fontWeight": "bold",
          "paddingBottom": "16px",
        }
      }
      variant="h5"
    >
      login.title
    </WithStyles(ForwardRef(Typography))>
    <CredentialsLoginScreen
      auth={
        Object {
          "failedToLogin": false,
          "loading": false,
          "provider": TestAuthProvider {
            "authUrl": undefined,
            "autoLogin": undefined,
            "mnemonic": undefined,
            "redirectUrl": null,
            "token": null,
            "user": null,
          },
          "signedOutDueToTokenInvalidation": false,
        }
      }
      classes={
        Object {
          "avatar": "avatar-class",
          "paper": "paper-class",
          "root": "root-1",
          "spinner": "spinner-class",
        }
      }
      location={
        Object {
          "hash": "",
          "pathname": "/",
          "search": "",
          "state": undefined,
        }
      }
      setComponentVisible={[Function]}
      verifyUsernameAndPassword={[Function]}
    />
    <WithStyles(ForwardRef(CircularProgress))
      className="spinner-class"
    />
  </WithStyles(ForwardRef(Paper))>
</div>
`;

exports[`Login page component login page renders credentials login if mnemonic present + user/pass is selected 1`] = `
<div
  className="root-1"
>
  <WithStyles(ForwardRef(Paper))
    className="paper-class"
  >
    <WithStyles(ForwardRef(Avatar))
      className="avatar-class"
    >
      <Memo(ForwardRef(LockOutlinedIcon)) />
    </WithStyles(ForwardRef(Avatar))>
    <WithStyles(ForwardRef(Typography))
      component="h1"
      style={
        Object {
          "fontWeight": "bold",
          "paddingBottom": "16px",
        }
      }
      variant="h5"
    >
      login.title
    </WithStyles(ForwardRef(Typography))>
    <CredentialsLoginScreen
      auth={
        Object {
          "failedToLogin": false,
          "loading": false,
          "provider": TestAuthProvider {
            "authUrl": undefined,
            "autoLogin": undefined,
            "mnemonic": "user/pass",
            "redirectUrl": null,
            "token": null,
            "user": null,
          },
          "signedOutDueToTokenInvalidation": false,
        }
      }
      classes={
        Object {
          "avatar": "avatar-class",
          "paper": "paper-class",
          "root": "root-1",
          "spinner": "spinner-class",
        }
      }
      location={
        Object {
          "hash": "",
          "pathname": "/",
          "search": "",
          "state": undefined,
        }
      }
      mnemonic="user/pass"
      setComponentVisible={[Function]}
      verifyUsernameAndPassword={[Function]}
    />
    <WithStyles(ForwardRef(CircularProgress))
      className="spinner-class"
    />
  </WithStyles(ForwardRef(Paper))>
</div>
`;

exports[`Login page component login page renders dropdown if mnemonic present + there are multiple mnemonics (but it filters out anon) 1`] = `
<div
  className="root-1"
>
  <WithStyles(ForwardRef(Paper))
    className="paper-class"
  >
    <WithStyles(ForwardRef(Avatar))
      className="avatar-class"
    >
      <Memo(ForwardRef(LockOutlinedIcon)) />
    </WithStyles(ForwardRef(Avatar))>
    <WithStyles(ForwardRef(Typography))
      component="h1"
      style={
        Object {
          "fontWeight": "bold",
          "paddingBottom": "16px",
        }
      }
      variant="h5"
    >
      login.title
    </WithStyles(ForwardRef(Typography))>
    <LoginSelector
      auth={
        Object {
          "failedToLogin": false,
          "loading": false,
          "provider": TestAuthProvider {
            "authUrl": undefined,
            "autoLogin": undefined,
            "mnemonic": "",
            "redirectUrl": null,
            "token": null,
            "user": null,
          },
          "signedOutDueToTokenInvalidation": false,
        }
      }
      classes={
        Object {
          "avatar": "avatar-class",
          "paper": "paper-class",
          "root": "root-1",
          "spinner": "spinner-class",
        }
      }
      location={
        Object {
          "hash": "",
          "pathname": "/",
          "search": "",
          "state": undefined,
        }
      }
      mnemonic=""
      mnemonics={
        Array [
          Object {
            "keys": Array [
              Object {
                "name": "username",
              },
              Object {
                "name": "password",
              },
            ],
            "mnemonic": "user/pass",
          },
          Object {
            "keys": Array [
              Object {
                "name": "username",
              },
              Object {
                "name": "password",
              },
            ],
            "mnemonic": "ldap",
          },
        ]
      }
      setComponentVisible={[Function]}
      setMnemonic={[Function]}
      verifyUsernameAndPassword={[Function]}
    />
    <WithStyles(ForwardRef(CircularProgress))
      className="spinner-class"
    />
  </WithStyles(ForwardRef(Paper))>
</div>
`;

exports[`Login page component login page renders redirect component if redirect url present 1`] = `
<div
  className="root-1"
>
  <WithStyles(ForwardRef(Paper))
    className="paper-class"
  >
    <WithStyles(ForwardRef(Avatar))
      className="avatar-class"
    >
      <Memo(ForwardRef(LockOutlinedIcon)) />
    </WithStyles(ForwardRef(Avatar))>
    <WithStyles(ForwardRef(Typography))
      component="h1"
      style={
        Object {
          "fontWeight": "bold",
          "paddingBottom": "16px",
        }
      }
      variant="h5"
    >
      login.title
    </WithStyles(ForwardRef(Typography))>
    <RedirectLoginScreen
      auth={
        Object {
          "failedToLogin": false,
          "loading": false,
          "provider": TestAuthProvider {
            "authUrl": undefined,
            "autoLogin": undefined,
            "mnemonic": undefined,
            "redirectUrl": "test redirect",
            "token": null,
            "user": null,
          },
          "signedOutDueToTokenInvalidation": false,
        }
      }
      classes={
        Object {
          "avatar": "avatar-class",
          "paper": "paper-class",
          "root": "root-1",
          "spinner": "spinner-class",
        }
      }
      location={
        Object {
          "hash": "",
          "pathname": "/",
          "search": "",
          "state": undefined,
        }
      }
      setComponentVisible={[Function]}
      verifyUsernameAndPassword={[Function]}
    />
    <WithStyles(ForwardRef(CircularProgress))
      className="spinner-class"
    />
  </WithStyles(ForwardRef(Paper))>
</div>
`;

exports[`Login page component login page renders spinner if auth is loading 1`] = `
<div
  className="root-1"
>
  <WithStyles(ForwardRef(Paper))
    className="paper-class"
  >
    <WithStyles(ForwardRef(Avatar))
      className="avatar-class"
    >
      <Memo(ForwardRef(LockOutlinedIcon)) />
    </WithStyles(ForwardRef(Avatar))>
    <WithStyles(ForwardRef(Typography))
      component="h1"
      style={
        Object {
          "fontWeight": "bold",
          "paddingBottom": "16px",
        }
      }
      variant="h5"
    >
      login.title
    </WithStyles(ForwardRef(Typography))>
    <CredentialsLoginScreen
      auth={
        Object {
          "failedToLogin": false,
          "loading": true,
          "provider": TestAuthProvider {
            "authUrl": undefined,
            "autoLogin": undefined,
            "mnemonic": undefined,
            "redirectUrl": null,
            "token": null,
            "user": null,
          },
          "signedOutDueToTokenInvalidation": false,
        }
      }
      classes={
        Object {
          "avatar": "avatar-class",
          "paper": "paper-class",
          "root": "root-1",
          "spinner": "spinner-class",
        }
      }
      location={
        Object {
          "hash": "",
          "pathname": "/",
          "search": "",
          "state": undefined,
        }
      }
      setComponentVisible={[Function]}
      verifyUsernameAndPassword={[Function]}
    />
    <WithStyles(ForwardRef(CircularProgress))
      className="spinner-class"
    />
    <WithStyles(ForwardRef(CircularProgress))
      className="spinner-class"
    />
  </WithStyles(ForwardRef(Paper))>
</div>
`;

exports[`Login page component redirect component renders correctly 1`] = `
<div
  className="root-1"
>
  <WithStyles(ForwardRef(Button))
    color="primary"
    disabled={false}
    onClick={[Function]}
    variant="contained"
  >
    <WithStyles(ForwardRef(Typography))
      color="inherit"
      noWrap={true}
      style={
        Object {
          "marginTop": 3,
        }
      }
    >
      Login with Github
    </WithStyles(ForwardRef(Typography))>
  </WithStyles(ForwardRef(Button))>
</div>
`;

exports[`Login page component redirect component renders failedToLogin error correctly 1`] = `
<div
  className="root-1"
>
  <WithStyles(ForwardRef(Typography))>
    login.login-redirect-error-msg
  </WithStyles(ForwardRef(Typography))>
  <WithStyles(ForwardRef(Button))
    color="primary"
    disabled={false}
    onClick={[Function]}
    variant="contained"
  >
    <WithStyles(ForwardRef(Typography))
      color="inherit"
      noWrap={true}
      style={
        Object {
          "marginTop": 3,
        }
      }
    >
      Login with Github
    </WithStyles(ForwardRef(Typography))>
  </WithStyles(ForwardRef(Button))>
</div>
`;
